# advent-of-code

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
crates/2022/01/: Cargo.toml
crates/2022/02/: Cargo.toml
questions/: 2015_01.md  2015_02.md  2015_03.md  2015_04.md  2015_06.md  2015_07.md  2022_01.md  2022_02.md  2022_03.md  2022_04.md  2022_05.md  2022_06.md  2022_07.md  2022_08.md  2022_09.md  2022_10.md  2022_11.md  2022_12.md  2022_13.md  2022_14.md  2022_15.md  2022_16.md  2022_17.md  2022_18.md  2022_20.md  2022_21.md  2024_01.md  2024_02.md  2024_03.md  2024_04.md  2024_05.md  2024_06.md  2024_07.md  2024_08.md  2024_09.md  2024_10.md
src/: lib.rs  main.rs  node.rs
src/solver/: mod.rs  solver.rs  solver_2015_01.rs  solver_2015_02.rs  solver_2015_03.rs  solver_2015_04.rs  solver_2015_05.rs  solver_2015_06.rs  solver_2015_07.pest  solver_2015_07.rs  solver_2022_01.rs  solver_2022_02.rs  solver_2022_03.rs  solver_2022_04.rs  solver_2022_05.rs  solver_2022_06.rs  solver_2022_07.pest  solver_2022_07.rs  solver_2022_08.rs  solver_2022_09.rs  solver_2022_10.rs  solver_2022_11.rs  solver_2022_12.rs  solver_2022_13.rs  solver_2022_14.rs  solver_2022_15.rs  solver_2022_16.rs  solver_2022_17.rs  solver_2022_18.rs  solver_2022_20.rs  solver_2022_21.pest  solver_2022_21.rs  solver_2022_22.rs  solver_2024_01.rs  solver_2024_02.rs  solver_2024_03.rs  solver_2024_04.rs  solver_2024_05.rs  solver_2024_06.rs  utils.rs
src/solver/solver_2015_01/: input.rs  mod.rs
src/solver/solver_2015_02/: input.rs  mod.rs
src/solver/solver_2015_03/: input.rs  (+1 more)
(+112 files in other folders)
